Ultimas alterações na documentação e README.md
